tests/fixtures/components/compilable/input-errors-directive.blade.php
<input @error('name') invalid @enderror >