tests/fixtures/components/invalid-foldable/old.blade.php
@blaze

<input type="text" name="email" value="{{ old('email') }}" />
